# phosphorvm

./: .clang-format  CMakeLists.txt  DISASSEMBLY.md  LICENSE.md  ODDITIES.md  POSTPROCESS.md  README.md  config.hpp  main.cpp
bytecode/: disasm.cpp  disasm.hpp  enums.hpp  names.cpp  types.hpp
doc/: STACK.md
interpreter/: blockreader.hpp  builtin.hpp  context.hpp  contextstack.hpp  frame.hpp  framestack.hpp  instance.hpp  mainstack.hpp  stack.hpp  string.hpp  variable.hpp  variableoperand.hpp  variablereference.hpp  vm.cpp  vm.hpp  vm.hpp.autosave  vminline.hpp  vmstate.hpp  vmtraits.hpp
interpreter/builtins/: bind.cpp  common.hpp  debug.cpp
interpreter/traits/: are.hpp  common.hpp  datatype.hpp  variable.hpp
src/phosphorvm/: CMakeLists.txt  main.cpp
src/phosphorvm/bytecode/: disasm.cpp  disasm.hpp  enums.hpp  names.cpp  names.hpp
src/phosphorvm/interpreter/: blockreader.hpp  builtin.hpp  contextstack.hpp  frame.hpp  framestack.hpp  instance.hpp  mainstack.hpp  traits.hpp  variable.hpp  variableoperand.hpp  vm.cpp  vm.hpp  vmstate.hpp
src/phosphorvm/interpreter/builtins/: bind.cpp  bind.hpp
src/phosphorvm/interpreter/traits/: common.hpp  datatype.hpp  variable.hpp
src/phosphorvm/std/: debug.cpp  debug.hpp  everything.hpp
src/phosphorvm/unpack/: decode.hpp  except.hpp  gmreader.hpp  mmap.cpp
src/phosphorvm/unpack/chunk/: background.hpp  chunk.hpp  code.hpp  common.hpp  form.cpp  form.hpp  function.hpp  list.hpp  metadata.hpp  script.hpp  sprite.hpp  strings.hpp  variable.hpp  wip.hpp
src/phosphorvm/util/: compilersupport.hpp  errormanagement.hpp
src/pvm/: CMakeLists.txt  config.hpp  main.cpp
src/pvm/bc/: disasm.cpp  disasm.hpp  enums.hpp  names.cpp  names.hpp
src/pvm/bytecode/: disasm.cpp  disasm.hpp  enums.hpp  names.cpp  names.hpp
src/pvm/interpreter/: blockreader.hpp  builtin.hpp  contextstack.hpp  frame.hpp  framestack.hpp  instance.hpp  mainstack.hpp  traits.hpp  variable.hpp  variableoperand.hpp  vm.cpp  vm.hpp  vmstate.hpp
src/pvm/interpreter/builtins/: bind.cpp  bind.hpp
src/pvm/interpreter/traits/: common.hpp  datatype.hpp  variable.hpp
src/pvm/std/: debug.cpp  debug.hpp  everything.hpp
src/pvm/unpack/: decode.hpp  gmreader.hpp  mmap.cpp
src/pvm/unpack/chunk/: background.hpp  chunk.hpp  code.hpp  common.hpp  form.cpp  form.hpp  function.hpp  list.hpp  metadata.hpp  script.hpp  sprite.hpp  strings.hpp  variable.hpp
src/pvm/util/: cast.hpp  compilersupport.hpp  errormanagement.hpp  nametype.hpp
src/pvm/vm/: blockreader.hpp  context.hpp  contextstack.hpp  frame.hpp  framestack.hpp  instance.hpp  instancemanager.cpp  instancemanager.hpp  mainstack.hpp  traits.hpp  typecheck.hpp  variable.hpp  vm.cpp  vm.hpp  vmstate.hpp
src/pvm/vm/builtins/: bind.cpp  bind.hpp  bindwrapper.hpp
src/pvm/vm/traits/: are.hpp  common.hpp  datatype.hpp  funcinfo.hpp  isinstanciationof.hpp  numerictype.hpp  variable.hpp
std/: debug.cpp  debug.hpp  everything.hpp
unpack/: decode.cpp  decode.hpp  except.hpp  gmreader.hpp  helper.hpp  mmap.cpp  mmap.hpp  reader.hpp  winfile.cpp  winfile.hpp
unpack/chunk/: background.hpp  chunk.cpp  (+13 more)
util/: cast.hpp  errormanagement.hpp
